test/ping-cloud/pingfederate/admin-ingress.yaml
# This defines the ingress for the pingfederate admin services.

# NOTE: this is just for Beluga dev/testing purposes. PingCloud will not have one of these.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingfederate-admin-ingress
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-private
spec:
  tls:
    - hosts:
        - pingfederate-admin${ENVIRONMENT}.${TENANT_DOMAIN}
  rules:
    - host: pingfederate-admin${ENVIRONMENT}.${TENANT_DOMAIN}
      http:
        paths:
          # This rule gives internal access to the pingfederate admin services.
          - path: /
            backend:
              serviceName: pingfederate-admin
              servicePort: 9999
